--- a/Ellla.html
+++ b/Ellla.html
@@ -1,2 +1,6 @@
 Question 
-write some stept how git is working and  commands 
+write some stept how git is working and  commands //
+git commands
+git add <div class="hggfdshgj"></div>
+git commit -m"message"
+touch file name
