--- a/yonni.html
+++ b/yonni.html
@@ -1,2 +1,8 @@
 Question 
 write some stept how git is working and  commands 
+Answer
+Step 1: Create a GitHub account. The easiest way to get started is to create an account on GitHub.com (it's free).
+Step 2: Create a new repository. ...
+Step 3: Create a file. ...
+Step 4: Make a commit. ...
+Step 5: Connect your GitHub repo with your computer. ...
