--- a/Ellla.html
+++ b/Ellla.html
@@ -4,3 +4,7 @@ git commands
 git add <div class="hggfdshgj"></div>
 git commit -m"message"
 touch file name
+	
+	Q2
+	
+Catacorize local and remote commnads
