--- a/nati.html
+++ b/nati.html
@@ -11,3 +11,8 @@ git push -u <remote> <branch-name></branch-name>
     git status
     git add <file></file>
     git add .
+	
+	
+	Q2
+	
+Catacorize local and remote commnads
