--- a/nati.html
+++ b/nati.html
@@ -16,3 +16,16 @@ git push -u <remote> <branch-name></branch-name>
 	Q2
 	
 Catacorize local and remote commnads
+        remote commands
+git push
+git clone
+git pull
+git fetch
+git config
+        local commands
+git init
+git add . 
+touch
+git commit -m""message"
+git status
+git log
